--- a/FittrIOS/en.lproj/MainStoryboard.storyboard
+++ b/FittrIOS/en.lproj/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2844" systemVersion="11G63" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vOV-SB-VfK">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2844" systemVersion="12C60" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vOV-SB-VfK">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1930"/>
     </dependencies>
@@ -31,7 +31,7 @@
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="loginbg.png" translatesAutoresizingMaskIntoConstraints="NO" id="4w4-EA-ymb">
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="416" id="6eW-PH-boI"/>
+                                    <constraint firstAttribute="height" constant="423" id="F05-7H-czd"/>
                                 </constraints>
                             </imageView>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="logo@2x.png" translatesAutoresizingMaskIntoConstraints="NO" id="faf-b2-dRe">
@@ -41,7 +41,7 @@
                             </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="UTU-e6-F2h">
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="49" type="user" id="tPM-Cb-yAb"/>
+                                    <constraint firstAttribute="height" constant="49" id="pZK-z4-hVC"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
                                 <state key="normal" title="Login with Fittr details" backgroundImage="roundrectbg.png">
@@ -74,20 +74,18 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="UTU-e6-F2h" firstAttribute="trailing" secondItem="faf-b2-dRe" secondAttribute="trailing" type="default" id="0pb-Mu-8vd"/>
-                            <constraint firstAttribute="trailing" secondItem="UTU-e6-F2h" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="7Zs-md-Qyb"/>
-                            <constraint firstAttribute="trailing" secondItem="ra9-fO-EWX" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="7l3-j7-kUL"/>
-                            <constraint firstItem="4w4-EA-ymb" firstAttribute="bottom" secondItem="3" secondAttribute="bottom" type="default" id="Btq-T8-Myc"/>
-                            <constraint firstItem="ra9-fO-EWX" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="C9R-vO-1gw"/>
-                            <constraint firstItem="4w4-EA-ymb" firstAttribute="top" secondItem="3" secondAttribute="top" type="default" id="F8t-1u-AOT"/>
-                            <constraint firstItem="UTU-e6-F2h" firstAttribute="leading" secondItem="faf-b2-dRe" secondAttribute="leading" type="default" id="FVj-TS-Tr0"/>
-                            <constraint firstAttribute="bottom" secondItem="ra9-fO-EWX" secondAttribute="bottom" constant="108" id="Nv9-06-NAS"/>
-                            <constraint firstItem="faf-b2-dRe" firstAttribute="top" secondItem="3" secondAttribute="top" constant="11" id="TYu-dS-tYZ"/>
-                            <constraint firstAttribute="bottom" relation="greaterThanOrEqual" secondItem="UTU-e6-F2h" secondAttribute="bottom" constant="20" type="user" id="WEh-jA-Twk"/>
-                            <constraint firstItem="UTU-e6-F2h" firstAttribute="top" secondItem="3" secondAttribute="top" constant="197" id="d2w-WC-Ozs"/>
-                            <constraint firstItem="4w4-EA-ymb" firstAttribute="leading" secondItem="3" secondAttribute="leading" type="default" id="dQP-Hy-w6R"/>
-                            <constraint firstItem="UTU-e6-F2h" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="go4-Ll-hrK"/>
-                            <constraint firstItem="4w4-EA-ymb" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" type="default" id="vnU-0J-o66"/>
+                            <constraint firstItem="UTU-e6-F2h" firstAttribute="top" secondItem="3" secondAttribute="top" constant="196" id="5uM-2Z-hAg"/>
+                            <constraint firstAttribute="trailing" secondItem="UTU-e6-F2h" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="Ph9-Iq-BZn"/>
+                            <constraint firstAttribute="trailing" secondItem="ra9-fO-EWX" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="ShM-do-XKG"/>
+                            <constraint firstItem="UTU-e6-F2h" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="Vtd-Ft-ZlO"/>
+                            <constraint firstItem="4w4-EA-ymb" firstAttribute="leading" secondItem="3" secondAttribute="leading" type="default" id="W4n-kt-LIb"/>
+                            <constraint firstItem="faf-b2-dRe" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="ZKd-iJ-1Dx"/>
+                            <constraint firstItem="faf-b2-dRe" firstAttribute="top" secondItem="3" secondAttribute="top" constant="13" id="e7K-ZG-iNP"/>
+                            <constraint firstAttribute="bottom" secondItem="ra9-fO-EWX" secondAttribute="bottom" constant="105" id="eyx-6R-RaY"/>
+                            <constraint firstItem="ra9-fO-EWX" firstAttribute="leading" secondItem="3" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="sRL-ur-hN4"/>
+                            <constraint firstItem="4w4-EA-ymb" firstAttribute="top" secondItem="3" secondAttribute="top" constant="-1" id="sux-CA-CE8"/>
+                            <constraint firstAttribute="trailing" secondItem="faf-b2-dRe" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="ux0-Xb-yim"/>
+                            <constraint firstItem="4w4-EA-ymb" firstAttribute="trailing" secondItem="3" secondAttribute="trailing" type="default" id="w8y-ln-hRF"/>
                         </constraints>
                     </view>
                     <navigationItem key="navigationItem" title="Welcome" id="uY4-E3-r8G"/>
@@ -227,7 +225,7 @@
             <objects>
                 <viewController id="7qc-hS-fop" customClass="NormalLoginProgressViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Scy-zA-JLr">
-                        <rect key="frame" x="0.0" y="20" width="320" height="548"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="460"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="loginbg.png" translatesAutoresizingMaskIntoConstraints="NO" id="PvA-OE-jZ0"/>
@@ -348,7 +346,7 @@
             <objects>
                 <viewController id="4q5-VC-9Gf" customClass="NormalLoginViewController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Jkq-EZ-PhC">
-                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="loginbg.png" translatesAutoresizingMaskIntoConstraints="NO" id="laq-bR-rfd"/>
@@ -811,7 +809,6 @@
             <source key="sourceIdentifier" type="project" relativePath="./Classes/LoginSelectionController.h"/>
             <relationships>
                 <relationship kind="action" name="getTweets:"/>
-                <relationship kind="action" name="loginNormally:"/>
                 <relationship kind="action" name="loginWithFacebook:"/>
                 <relationship kind="outlet" name="logo" candidateClass="UIImageView"/>
             </relationships>
