--- a/FittrIOS/en.lproj/MainStoryboard.storyboard
+++ b/FittrIOS/en.lproj/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2844" systemVersion="12C60" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vOV-SB-VfK">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2844" systemVersion="11G63" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vOV-SB-VfK">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1930"/>
     </dependencies>
@@ -26,7 +26,7 @@
             <objects>
                 <viewController id="2" customClass="LoginSelectionController" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="3">
-                        <rect key="frame" x="0.0" y="64" width="320" height="504"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="416"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="loginbg.png" translatesAutoresizingMaskIntoConstraints="NO" id="4w4-EA-ymb">
@@ -103,7 +103,7 @@
             <objects>
                 <viewController title="Feed" id="4Lo-Yh-sPD" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="frb-Ew-X2Y">
-                        <rect key="frame" x="0.0" y="20" width="320" height="499"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="411"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" rowHeight="44" sectionHeaderHeight="22" sectionFooterHeight="22" translatesAutoresizingMaskIntoConstraints="NO" id="ste-ma-UZU">
@@ -246,14 +246,14 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="pPL-X9-6Ka" firstAttribute="top" secondItem="Scy-zA-JLr" secondAttribute="top" constant="255" id="4cf-K6-O2C"/>
-                            <constraint firstAttribute="trailing" secondItem="Jog-bb-reo" secondAttribute="trailing" constant="81" id="IXD-mm-4NO"/>
-                            <constraint firstItem="PvA-OE-jZ0" firstAttribute="bottom" secondItem="Scy-zA-JLr" secondAttribute="bottom" type="default" id="TyG-7g-JPu"/>
+                            <constraint firstItem="pPL-X9-6Ka" firstAttribute="centerY" secondItem="PvA-OE-jZ0" secondAttribute="centerY" type="default" id="1u1-hq-i4R"/>
                             <constraint firstItem="PvA-OE-jZ0" firstAttribute="trailing" secondItem="Scy-zA-JLr" secondAttribute="trailing" type="default" id="VFp-nC-3kj"/>
                             <constraint firstItem="PvA-OE-jZ0" firstAttribute="top" secondItem="Scy-zA-JLr" secondAttribute="top" type="default" id="bKX-32-gRb"/>
-                            <constraint firstItem="pPL-X9-6Ka" firstAttribute="centerX" secondItem="PvA-OE-jZ0" secondAttribute="centerX" type="default" id="e5I-CJ-7e2"/>
-                            <constraint firstAttribute="bottom" secondItem="Jog-bb-reo" secondAttribute="bottom" constant="58" id="pxW-1j-cfJ"/>
+                            <constraint firstAttribute="centerX" secondItem="pPL-X9-6Ka" secondAttribute="centerX" type="user" id="mof-SD-pVR"/>
+                            <constraint firstAttribute="centerY" secondItem="pPL-X9-6Ka" secondAttribute="centerY" type="user" id="sH3-EJ-Kl6"/>
+                            <constraint firstItem="Jog-bb-reo" firstAttribute="centerX" secondItem="pPL-X9-6Ka" secondAttribute="centerX" type="default" id="sSc-OQ-GNo"/>
                             <constraint firstItem="PvA-OE-jZ0" firstAttribute="leading" secondItem="Scy-zA-JLr" secondAttribute="leading" type="default" id="xKo-kg-zKY"/>
+                            <constraint firstAttribute="bottom" secondItem="Jog-bb-reo" secondAttribute="bottom" constant="95" id="xaF-DA-Jd1"/>
                         </constraints>
                     </view>
                     <connections>
@@ -269,7 +269,7 @@
             <objects>
                 <viewController title="You" id="CVl-Ab-bnr" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="9p3-Ro-aav">
-                        <rect key="frame" x="0.0" y="20" width="320" height="499"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="411"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <navigationBar contentMode="scaleToFill" barStyle="blackOpaque" translatesAutoresizingMaskIntoConstraints="NO" id="UtR-b2-bK0">
@@ -439,7 +439,7 @@
             <objects>
                 <tableViewController title="Workouts" id="RaY-cS-CcR" customClass="SettingsViewController" sceneMemberID="viewController">
                     <tableView key="view" opaque="NO" clipsSubviews="YES" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="static" style="grouped" separatorStyle="singleLineEtched" rowHeight="44" sectionHeaderHeight="10" sectionFooterHeight="10" id="WcU-jm-sk7">
-                        <rect key="frame" x="0.0" y="64" width="320" height="455"/>
+                        <rect key="frame" x="0.0" y="64" width="320" height="367"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
                         <sections>
@@ -623,7 +623,7 @@
             <objects>
                 <viewController title="Settings" id="gX3-FD-MgH" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="0Pl-ru-sb9">
-                        <rect key="frame" x="0.0" y="20" width="320" height="499"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="411"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <navigationBar contentMode="scaleToFill" barStyle="blackOpaque" translatesAutoresizingMaskIntoConstraints="NO" id="leh-CP-T3d">
@@ -691,7 +691,7 @@
             <objects>
                 <viewController title="Alexis" id="3dw-Jq-uKR" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="ssz-1i-dYe">
-                        <rect key="frame" x="0.0" y="20" width="320" height="499"/>
+                        <rect key="frame" x="0.0" y="20" width="320" height="411"/>
                         <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                         <subviews>
                             <navigationBar contentMode="scaleToFill" barStyle="blackOpaque" translatesAutoresizingMaskIntoConstraints="NO" id="r33-Iy-aq6">
@@ -807,33 +807,10 @@
         <image name="workouttab.png" width="28" height="18"/>
         <image name="youtab.png" width="28" height="26"/>
     </resources>
-    <classes>
-        <class className="LoginViewController" superclassName="ViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/LoginViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="getTweets:"/>
-                <relationship kind="action" name="loginNormally:"/>
-                <relationship kind="action" name="loginWithFacebook:"/>
-                <relationship kind="outlet" name="logo" candidateClass="UIImageView"/>
-            </relationships>
-        </class>
-        <class className="NSLayoutConstraint" superclassName="NSObject">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/NSLayoutConstraint.h"/>
-        </class>
-        <class className="SettingsViewController" superclassName="UITableViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/SettingsViewController.h"/>
-            <relationships>
-                <relationship kind="action" name="signOut:"/>
-            </relationships>
-        </class>
-        <class className="ViewController" superclassName="UIViewController">
-            <source key="sourceIdentifier" type="project" relativePath="./Classes/ViewController.h"/>
-        </class>
-    </classes>
     <simulatedMetricsContainer key="defaultSimulatedMetrics">
         <simulatedStatusBarMetrics key="statusBar"/>
         <simulatedOrientationMetrics key="orientation"/>
-        <simulatedScreenMetrics key="destination" type="retina4"/>
+        <simulatedScreenMetrics key="destination"/>
     </simulatedMetricsContainer>
     <inferredMetricsTieBreakers>
         <segue reference="iZh-fC-kri"/>
