--- a/FittrIOS/en.lproj/MainStoryboard.storyboard
+++ b/FittrIOS/en.lproj/MainStoryboard.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2844" systemVersion="11G63" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vOV-SB-VfK">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="2.0" toolsVersion="2844" systemVersion="12C60" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" initialViewController="vOV-SB-VfK">
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="1930"/>
     </dependencies>
@@ -369,14 +369,20 @@
                                     <action selector="login:" destination="4q5-VC-9Gf" eventType="touchUpInside" id="4EP-Ru-QyX"/>
                                 </connections>
                             </button>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" borderStyle="roundedRect" placeholder="Username" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="5cJ-Pr-JDX">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" placeholder="Username" minimumFontSize="17" background="toptext.png" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="5cJ-Pr-JDX">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="K5G-5s-HIK"/>
+                                </constraints>
                                 <attributedString key="attributedText"/>
                                 <textInputTraits key="textInputTraits" returnKeyType="next"/>
                                 <connections>
                                     <outlet property="delegate" destination="4q5-VC-9Gf" id="Orv-pV-1kj"/>
                                 </connections>
                             </textField>
-                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" borderStyle="roundedRect" placeholder="Pasword" minimumFontSize="17" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="dQ3-TL-QJV">
+                            <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" usesAttributedText="YES" placeholder="Pasword" minimumFontSize="17" background="bottomtext.png" clearButtonMode="whileEditing" translatesAutoresizingMaskIntoConstraints="NO" id="dQ3-TL-QJV">
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="30" id="DK8-ts-nHF"/>
+                                </constraints>
                                 <attributedString key="attributedText"/>
                                 <textInputTraits key="textInputTraits" returnKeyType="done" secureTextEntry="YES"/>
                                 <connections>
@@ -386,17 +392,17 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="dQ3-TL-QJV" firstAttribute="top" secondItem="5cJ-Pr-JDX" secondAttribute="bottom" constant="8" symbolic="YES" type="default" id="1Ms-zX-vNG"/>
                             <constraint firstItem="laq-bR-rfd" firstAttribute="trailing" secondItem="Jkq-EZ-PhC" secondAttribute="trailing" type="default" id="3R5-R2-IXW"/>
                             <constraint firstAttribute="trailing" secondItem="5cJ-Pr-JDX" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="54c-wH-XbI"/>
                             <constraint firstAttribute="trailing" secondItem="dQ3-TL-QJV" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="GH8-vS-BT7"/>
                             <constraint firstItem="laq-bR-rfd" firstAttribute="leading" secondItem="Jkq-EZ-PhC" secondAttribute="leading" type="default" id="NWR-4S-dzX"/>
                             <constraint firstItem="laq-bR-rfd" firstAttribute="bottom" secondItem="Jkq-EZ-PhC" secondAttribute="bottom" type="default" id="Nwd-ru-lc8"/>
                             <constraint firstItem="koX-Th-esy" firstAttribute="leading" secondItem="Jkq-EZ-PhC" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="Ojf-XO-gnE"/>
-                            <constraint firstItem="5cJ-Pr-JDX" firstAttribute="top" secondItem="Jkq-EZ-PhC" secondAttribute="top" constant="20" symbolic="YES" type="default" id="VI3-J7-YUp"/>
+                            <constraint firstItem="dQ3-TL-QJV" firstAttribute="top" secondItem="Jkq-EZ-PhC" secondAttribute="top" constant="58" id="Pas-Fv-bch"/>
                             <constraint firstItem="koX-Th-esy" firstAttribute="top" secondItem="Jkq-EZ-PhC" secondAttribute="top" constant="129" id="amU-lc-65f"/>
                             <constraint firstItem="dQ3-TL-QJV" firstAttribute="leading" secondItem="Jkq-EZ-PhC" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="bU6-Ca-wHM"/>
                             <constraint firstAttribute="trailing" secondItem="koX-Th-esy" secondAttribute="trailing" constant="20" symbolic="YES" type="default" id="i8G-K4-Fqm"/>
+                            <constraint firstItem="5cJ-Pr-JDX" firstAttribute="top" secondItem="Jkq-EZ-PhC" secondAttribute="top" constant="27" id="mXW-Gi-WIe"/>
                             <constraint firstItem="5cJ-Pr-JDX" firstAttribute="leading" secondItem="Jkq-EZ-PhC" secondAttribute="leading" constant="20" symbolic="YES" type="default" id="r6d-kX-d8o"/>
                             <constraint firstItem="laq-bR-rfd" firstAttribute="top" secondItem="Jkq-EZ-PhC" secondAttribute="top" type="default" id="vpg-WI-glH"/>
                         </constraints>
@@ -794,6 +800,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="bottomtext.png" width="286" height="45"/>
         <image name="connectwfb@2x.png" width="492" height="90"/>
         <image name="feedtab.png" width="33" height="24"/>
         <image name="iristab.png" width="25" height="14"/>
@@ -804,6 +811,7 @@
         <image name="silver-button-pressed@2x.png" width="612" height="93"/>
         <image name="startworkout@2x.png" width="600" height="125"/>
         <image name="startworkoutclick@2x.png" width="600" height="125"/>
+        <image name="toptext.png" width="286" height="43"/>
         <image name="workouttab.png" width="28" height="18"/>
         <image name="youtab.png" width="28" height="26"/>
     </resources>
